--- a/.forgejo/workflows/build.yml
+++ b/.forgejo/workflows/build.yml
@@ -6,15 +6,11 @@ on:
 jobs:
   build:
     runs-on: docker
+    container:
+      image: node:20
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-        # This is the critical missing step
-      - name: Setup Node.js (Required for setup-bun v2)
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
 
       - name: Setup Bun
         uses: https://github.com/oven-sh/setup-bun@v2
