--- a/.forgejo/workflows/build.yml
+++ b/.forgejo/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup Bun
         uses: https://github.com/oven-sh/setup-bun@v2
         with:
-          bun-version: 1.1.1
+          bun-download-url: "https://github.com/oven-sh/bun/releases/latest/download/bun-linux-x64.zip"
 
       - name: Install dependencies
         run: bun install --frozen-lockfile
