--- a/.forgejo/workflows/build.yml
+++ b/.forgejo/workflows/build.yml
@@ -15,8 +15,8 @@ jobs:
       # 1. FIX: Install system dependencies BEFORE setup-bun
       - name: Install system dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y unzip libstdc++6
+          apt-get update
+          apt-get install -y unzip libstdc++6
 
       - name: Setup Bun
         uses: https://github.com/oven-sh/setup-bun@v2
