build: added cef deps

--- a/.forgejo/workflows/build.yml
+++ b/.forgejo/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install system dependencies
         run: |
           apt-get update
-          apt-get install -y unzip libstdc++6
+          apt-get install -y unzip libstdc++6 libnss3 libatk1.0-0 libatk-bridge2.0-0 libcups2 libdrm2 libxkbcommon0 libxcomposite1 libxdamage1 libxrandr2 libgbm1 libasound2
 
       - name: Manual Bun Install
         run: |
