build: added push trigger to build job

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,8 @@
 name: Build and Upload Canary
 on:
-  # Allows you to run this manually from the Forgejo UI
+  push:
+    tags:
+      - "v*.*.*"
   workflow_dispatch:
 
 jobs:
