--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,35 +4,29 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
         {
-            "type": "bun",
-            "internalConsoleOptions": "neverOpen",
-            "request": "launch",
-            "name": "Debug File",
-            "program": "./src/bun/index.ts",
-            "cwd": "${workspaceFolder}",
-            "stopOnEntry": false,
-            "watchMode": true
-        },
-        {
-            "type": "bun",
-            "internalConsoleOptions": "neverOpen",
-            "request": "launch",
-            "name": "Run File",
-            "program": "./src/bun/index.ts",
-            "cwd": "${workspaceFolder}",
-            "noDebug": true,
-            "watchMode": false
+            "name": "Attach to Edge",
+            "port": 9222,
+            "request": "attach",
+            "type": "msedge",
+            "webRoot": "${workspaceFolder}/src",
         },
         {
             "type": "bun",
             "internalConsoleOptions": "neverOpen",
             "request": "attach",
             "name": "Attach Bun",
-            "url": "ws://127.0.0.1:9229/nvnfnsqez8s",
+            "url": "ws://127.0.0.1:9229/7lt63qegtr8",
             "localRoot": "${workspaceFolder}",
-            "stopOnEntry": false
+            "stopOnEntry": false,
+        }
+    ],
+    "compounds": [
+        {
+            "name": "Attach Debug App",
+            "configurations": ["Attach Bun", "Attach to Edge"],
+            "stopAll": true,
+            "preLaunchTask": "bun: dev"
         }
     ]
 }
