--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Game Launcher",
   "type": "module",
   "scripts": {
-    "dev": "bun run build:dev && NODE_ENV=development bun run --inspect=127.0.0.1:9229 --watch ./src/bun/index.ts",
+    "dev": "NODE_ENV=development bun run build && WEBVIEW2_ADDITIONAL_BROWSER_ARGUMENTS='--remote-debugging-port=9222' bun run --inspect=127.0.0.1:9229 --watch ./src/bun/index.ts",
     "dev:hmr": "PUBLIC_ACCESS=true conc -k 'bun run hmr' 'bun run dev'",
     "build": "vite build",
     "build:pro": "NODE_ENV=production bun run build",
@@ -14,7 +14,7 @@
     "package:auto-prod": "bun run build:pro && NODE_ENV=production bun run ./scripts/package-bun.ts",
     "package:linux": "bun run build && TARGET=bun-linux-x64 bun run ./scripts/package-bun.ts",
     "openapi-ts": "bun run ./scripts/romm/openapi-ts.ts",
-    "run:build-action": "act --artifact-server-path artifacts --env ACTIONS_RUNTIME_TOKEN=foo -W .github/workflows/build.yml",
+    "run:build-action": "act workflow_dispatch --artifact-server-path artifacts --env ACTIONS_RUNTIME_TOKEN=foo -W .github/workflows/build.yml",
     "hmr": "vite --port 5173"
   },
   "dependencies": {
@@ -22,16 +22,20 @@
     "@elysiajs/cors": "^1.4.1",
     "@elysiajs/eden": "^1.4.6",
     "@elysiajs/static": "^1.4.7",
+    "@hackolade/keytar": "^7.9.0-7",
     "@rcompat/webview": "^0.18.0",
     "conf": "^15.0.2",
     "elysia": "^1.4.22",
     "pathe": "^2.0.3",
+    "tough-cookie": "^6.0.0",
+    "tough-cookie-file-store": "^3.3.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
     "@hey-api/openapi-ts": "^0.91.0",
     "@noriginmedia/norigin-spatial-navigation": "^2.3.0",
     "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/react-form": "^1.28.0",
     "@tanstack/react-query": "^5.90.20",
     "@tanstack/react-query-devtools": "^5.91.3",
     "@tanstack/react-router": "^1.157.16",
